--- a/CSS_Canvashjelp.css
+++ b/CSS_Canvashjelp.css
@@ -1,4 +1,4 @@
 #canvasHelpHeader{
-   background-image: url('');
+   background-image: url('https://hivolda.instructure.com/files/574/download?download_frd=1&amp;verifier=lFZYGTeOYw5gZMyAATxSyQocjaRWQQ8FjCpl40vc');
    background-color: #444;
 }
