--- a/CSS_Canvashjelp.css
+++ b/CSS_Canvashjelp.css
@@ -2,3 +2,7 @@
    background-image: url('https://hivolda.instructure.com/files/574/download?download_frd=1&amp;verifier=lFZYGTeOYw5gZMyAATxSyQocjaRWQQ8FjCpl40vc');
    background-color: #444;
 }
+
+#content > div > div.file-upload-submission-attachment > a{
+   font-size: 2em;
+}
